# advisor-experience-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.ci-local.yml  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml  requirements-audit.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/demo/: README.md
docs/documentation/: git-branch-protection-workflow.md  implementation-documentation-standard.md
docs/rfcs/: README.md  RFC-0001-dpm-first-bff-proposal-simulation-slice.md  RFC-0002-bff-proposal-workspace-v1.md  RFC-0003-bff-approval-chain-and-supportability-pass-through.md  RFC-0004-platform-capabilities-aggregation-contract.md  RFC-0005-live-multi-service-e2e-platform-capabilities.md  RFC-0006-pas-intake-and-lookup-pass-through.md  RFC-0007-bff-lookup-delegation-to-pas-canonical-apis.md  RFC-0008-bff-pas-lookup-compatibility-contract-gate.md  RFC-0009-workbench-overview-aggregation-contract.md  RFC-0010-lifecycle-oriented-bff-contract-for-portfolio-advisory-and-dpm.md  RFC-0011-workbench-portfolio-360-and-live-sandbox-contract.md  RFC-0012-workbench-analytics-delta-api.md  RFC-0013-workbench-position-valuation-fields.md  RFC-0014-workbench-pas-core-snapshot-minimal-sections.md  RFC-0015-e2e-pyramid-wave-2-resilience-and-failure-paths.md  RFC-0016-live-e2e-ci-python-bootstrap-reliability.md
rfcs/: README.md  RFC-0001-aea-coverage-hardening-wave-1.md  RFC-0002-aea-coverage-hardening-wave-2.md  RFC-0003-aea-e2e-workflow-coverage-wave-1.md
src/app/: config.py  (+2 more)
(+60 files in other folders)
