[project]
name = "advisor-experience-api"
version = "0.1.0"
description = "BFF for Advisor Workbench"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.129.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.9",
  "prometheus-fastapi-instrumentator>=7.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.15.0",
  "mypy>=1.13.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/app"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
